testsuite/tests/explicit-dicts/should_fail/ExportClassOnly.hs
module ExportClassOnly
  ( Class1(method1)
  ) where

class Class1 a where
    method1 :: a -> Int
